network/istio/manifest/virtualservice/adminer.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: adminer-vs
  namespace: istio-system
spec:
  hosts:
  - "adminer.cwang.one"
  gateways:
  - gke-gateway
  http:
  - route:
    - destination:
        host: adminer.mariadb-galera.svc.cluster.local
        port:
          number: 8080
