network/istio/manifest/virtualservice/argocd.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-vs
  namespace: istio-system
spec:
  hosts:
  - "argocd.cwang.one"
  gateways:
  - gke-gateway
  http:
  - route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 80
