network/istio/manifest/virtualservice/argorollouts.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argorollouts-vs
  namespace: istio-system
spec:
  hosts:
  - "argorollouts.cwang.one"
  gateways:
  - gke-gateway
  http:
  - route:
    - destination:
        host: argo-rollouts-dashboard.argocd.svc.cluster.local
        port:
          number: 3100
