network/istio/manifest/virtualservice/grafana.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: istio-system
spec:
  hosts:
  - "grafana.cwang.one"
  gateways:
  - gke-gateway
  http:
  - route:
    - destination:
        host: kube-prometheus-stack-grafana.monitoring.svc.cluster.local
        port:
          number: 80
          # number: 3000
