network/istio/manifest/virtualservice/kiali.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: istio-system
spec:
  hosts:
  - "kiali.cwang.one"
  gateways:
  - gke-gateway
  http:
  - route:
    - destination:
        # host: kiali.istio-system.svc.cluster.local
        host: kiali.monitoring.svc.cluster.local
        port:
          number: 20001
