network/istio/manifest/virtualservice/prometheus.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: istio-system
spec:
  hosts:
  - "prometheus.cwang.one"
  gateways:
  - gke-gateway
  http:
  - route:
    - destination:
        host: kube-prometheus-stack-prometheus.monitoring.svc.cluster.local
        port:
          number: 9090
